# venvmanager

./: pyproject.toml
envmanager/: __init__.py  _pypi.py
tests/: test_envmanager.py  test_uv_venvmngr.py  test_venvmanager.py
venvmngr/: __init__.py  _uv.py
